--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -21,7 +21,7 @@ spec:
       command: [
         "/bin/bash",
         "-cpe",
-        "ls -la $JAVA_HOME/
+        "ls -la $JAVA_HOME/ &&
         cp $JAVA_HOME/lib/security/cacerts /mnt/keystore.jks && 
         openssl s_client -showcerts -connect dti-jenkins.unilab.edu.br:443 </dev/null 2>/dev/null|openssl x509 -outform PEM > /mnt/unilab-edu-br-chain.pem.crt && 
         keytool -import -trustcacerts -alias cacert-unlb -file /mnt/unilab-edu-br-chain.pem.crt -keystore /mnt/keystore.jks -noprompt -storepass changeit && 
