--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -24,8 +24,8 @@ spec:
         "cp $JAVA_HOME/lib/security/cacerts /mnt/keystore.jks && 
         openssl s_client -showcerts -connect dti-jenkins.unilab.edu.br:443 </dev/null 2>/dev/null|openssl x509 -outform PEM > /mnt/unilab-edu-br-chain.pem.crt && 
         keytool -import -trustcacerts -alias cacert-unlb -file /mnt/unilab-edu-br-chain.pem.crt -keystore /mnt/keystore.jks -noprompt -storepass changeit && 
-        cp /mnt/keystore.jks $JAVA_HOME/lib/security/cacerts && 
-        /usr/local/bin/mvn-entrypoint.sh && mvn"]
+        cp /mnt/keystore.jks $JAVA_HOME/lib/security/cacerts"]
+        #/usr/local/bin/mvn-entrypoint.sh && mvn"]
     - name: docker
       image: docker:18.06.1
       command: ["tail", "-f", "/dev/null"]
