--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -18,7 +18,7 @@ spec:
         keytool -import -trustcacerts -alias cacert-unlb -file /mnt/unilab-edu-br-chain.pem.crt -keystore /mnt/keystore.jks -noprompt -storepass changeit && 
         cp /mnt/keystore.jks $JAVA_HOME/lib/security/cacerts &&
         mvn"]
-      command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
+      command: ["tail", "-f", "/dev/null", "-Xe"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
       imagePullPolicy: Always # use cache or pull image for agent
       resources:  # limits the resources your build contaienr
         requests:
