--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -4,20 +4,6 @@ spec:
   containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
     - name: maven
       image: maven:3.8.6-openjdk-11
-      # para iniciar como root #
-      securityContext:
-        privileged: true
-        allowPrivilegeEscalation: true
-        runAsUser: 0
-      # para iniciar como root #
-      command: [
-        "/bin/bash",
-        "-cpe",
-        "cp $JAVA_HOME/lib/security/cacerts /mnt/keystore.jks && 
-        openssl s_client -showcerts -connect dti-jenkins.unilab.edu.br:443 </dev/null 2>/dev/null|openssl x509 -outform PEM > /mnt/unilab-edu-br-chain.pem.crt && 
-        keytool -import -trustcacerts -alias cacert-unlb -file /mnt/unilab-edu-br-chain.pem.crt -keystore /mnt/keystore.jks -noprompt -storepass changeit && 
-        cp /mnt/keystore.jks $JAVA_HOME/lib/security/cacerts &&
-        mvn"]
       command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
       imagePullPolicy: Always # use cache or pull image for agent
       resources:  # limits the resources your build contaienr
@@ -25,7 +11,14 @@ spec:
           memory: "1Gi"
           cpu: "500m"
         limits:
-          memory: "1Gi"
+          memory: "2Gi"
+      env:
+        - name: JAVA_OPTS
+          value: -Dmaven.wagon.http.ssl.insecure=true
+            -Xms1G
+            -Xmx2G
+            -XshowSettings:vm 
+            -Duser.timezone=America/Fortaleza
     - name: docker
       image: docker:23.0.1
       command: ["tail", "-f", "/dev/null"]
