--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -6,13 +6,12 @@ spec:
       image: maven:3.8.6-openjdk-11
       command: [
         "/bin/bash",
-        "-cpe",
+        "-cp",
         "cp $JAVA_HOME/lib/security/cacerts /mnt/keystore.jks && 
         openssl s_client -showcerts -connect dti-jenkins.unilab.edu.br:443 </dev/null 2>/dev/null|openssl x509 -outform PEM > /mnt/unilab-edu-br-chain.pem.crt && 
         keytool -import -trustcacerts -alias cacert-unlb -file /mnt/unilab-edu-br-chain.pem.crt -keystore /mnt/keystore.jks -noprompt -storepass changeit && 
-        cp /mnt/keystore.jks $JAVA_HOME/lib/security/cacerts && 
-        /usr/local/bin/mvn-entrypoint.sh && mvn"]
-      command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
+        cp /mnt/keystore.jks $JAVA_HOME/lib/security/cacerts",
+        "tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
       imagePullPolicy: Always # use cache or pull image for agent
       resources:  # limits the resources your build contaienr
         requests:
