--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -11,7 +11,7 @@ spec:
         openssl s_client -showcerts -connect dti-jenkins.unilab.edu.br:443 </dev/null 2>/dev/null|openssl x509 -outform PEM > /mnt/unilab-edu-br-chain.pem.crt && 
         keytool -import -trustcacerts -alias cacert-unlb -file /mnt/unilab-edu-br-chain.pem.crt -keystore /mnt/keystore.jks -noprompt -storepass changeit && 
         cp /mnt/keystore.jks $JAVA_HOME/lib/security/cacerts",
-        "tail", "-f", "/dev/null"]
+        "/dev/null"]
       imagePullPolicy: Always # use cache or pull image for agent
       resources:  # limits the resources your build contaienr
         requests:
