--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -10,8 +10,8 @@ spec:
         "cp $JAVA_HOME/lib/security/cacerts /mnt/keystore.jks;
         openssl s_client -showcerts -connect dti-jenkins.unilab.edu.br:443 </dev/null 2>/dev/null|openssl x509 -outform PEM > /mnt/unilab-edu-br-chain.pem.crt;
         keytool -import -trustcacerts -alias cacert-unlb -file /mnt/unilab-edu-br-chain.pem.crt -keystore /mnt/keystore.jks -noprompt -storepass changeit >/dev/null;
-        cp /mnt/keystore.jks $JAVA_HOME/lib/security/cacerts"]
-        #/usr/local/bin/mvn-entrypoint.sh"]
+        cp /mnt/keystore.jks $JAVA_HOME/lib/security/cacerts;
+        /usr/local/bin/mvn-entrypoint.sh"]
         #mvn"]
       imagePullPolicy: Always # use cache or pull image for agent
       resources:  # limits the resources your build contaienr
