--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -11,17 +11,15 @@ spec:
           memory: "1Gi"
           cpu: "500m"
         limits:
-          memory: "2Gi"
+          memory: "3Gi"
       env:
       - name: JAVA_OPTS
-        # To allocate controllers using a non-default storage class, add the following
-        # -Dcom.cloudbees.masterprovisioning.kubernetes.KubernetesMasterProvisioning.storageClassName=some-storage-class
         value: >-
+          -Xms1G
+          -Xmx2G
+          -XshowSettings:vm 
           -XshowSettings:vm
-          #-Djavax.net.ssl.trustStore=$JAVA_HOME/lib/security/cacerts
-          #-Djavax.net.ssl.trustStorePassword=changeit
-          -Dmaven.wagon.http.ssl.insecure=true 
-          -Dmaven.wagon.http.ssl.allowall=true
+          -Duser.timezone=America/Fortaleza
     - name: docker
       image: docker:23.0.1
       command: ["tail", "-f", "/dev/null"]
