--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -12,15 +12,15 @@ spec:
           cpu: "500m"
         limits:
           memory: "3Gi"
-      env:
-      - name: JENKINS_URL
-        value: "http://jenkins.jenkins.svc.cluster.local:8080"
-      - name: JAVA_OPTS
-        value: >-
-          -Xms1G
-          -Xmx2G
-          -XshowSettings:vm
-          -Duser.timezone=America/Fortaleza
+      #env:
+      #- name: JENKINS_URL
+      #  value: "http://jenkins.jenkins.svc.cluster.local:8080"
+      #- name: JAVA_OPTS
+      #  value: >-
+      #    -Xms1G
+      #    -Xmx2G
+      #    -XshowSettings:vm
+      #    -Duser.timezone=America/Fortaleza
     - name: docker
       image: docker:23.0.1
       command: ["tail", "-f", "/dev/null"]
