--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Pod
 spec:
   containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
-    - name: jnlp
+    - name: maven
       image: erivando/maven:3.9.0-openjdk-11 #maven:3.8.6-openjdk-11
       command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
       imagePullPolicy: Always # use cache or pull image for agent
