--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>br.edu.unilab.${APP_NAME}</groupId>
-  <artifactId>${APP_NAME}</artifactId>
+  <groupId>br.edu.unilab.${env.APP_NAME}</groupId>
+  <artifactId>${env.APP_NAME}</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>${APP_NAME}</name>
+  <name>${env.APP_NAME}</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -34,7 +34,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>br.edu.unilab.${APP_NAME}</mainClass>
+              <mainClass>br.edu.unilab.${env.APP_NAME}</mainClass>
             </manifest>
           </archive>
         </configuration>
