--- a/pom.xml
+++ b/pom.xml
@@ -1,12 +1,28 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+  
   <modelVersion>4.0.0</modelVersion>
-  <groupId>br.edu.unilab.${env.APP_NAME}</groupId>
+  <prerequisites>
+      <maven>3.0.0</maven>
+  </prerequisites>
+  
   <artifactId>${env.APP_NAME}</artifactId>
+  <version>1.0.0-SNAPSHOT</version>
+  <groupId>br.edu.unilab.${env.APP_NAME}</groupId>
+  <name>Example Application ${env.APP_NAME}</name>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
   <name>${env.APP_NAME}</name>
+  
+  <properties>
+      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+      <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+      <maven.compiler.source>1.8</maven.compiler.source>
+      <maven.compiler.target>1.8</maven.compiler.target>
+  </properties>
+  
   <url>http://maven.apache.org</url>
+  
   <dependencies>
     <dependency>
       <groupId>junit</groupId>
@@ -15,6 +31,7 @@
       <scope>test</scope>
     </dependency>
   </dependencies>
+  
   <build>
     <plugins>
       <plugin>
@@ -25,6 +42,7 @@
             <useSystemClassLoader>false</useSystemClassLoader>
           </configuration>
       </plugin>
+      
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-jar-plugin</artifactId>
@@ -39,6 +57,8 @@
           </archive>
         </configuration>
       </plugin>
+      
     </plugins>
   </build>
+  
 </project>
