--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -4,7 +4,7 @@ spec:
   containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
     - name: maven
       image: erivando/maven:3.9.0-openjdk-11 #maven:3.8.6-openjdk-11
-      command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
+      #command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
       imagePullPolicy: Always # use cache or pull image for agent
       resources:  # limits the resources your build contaienr
         requests:
@@ -14,8 +14,8 @@ spec:
           cpu: "5000m"
           memory: "3Gi"
     - name: docker
-      image: docker:23.0.1
-      command: ["tail", "-f", "/dev/null"]
+      image: docker:20.10.2-git
+      #command: ["tail", "-f", "/dev/null"]
       imagePullPolicy: Always
       resources: {}
       volumeMounts:
