--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -25,5 +25,5 @@ spec:
     - name: docker
       hostPath:
         path: /var/run/docker.sock
-  imagePullSecrets:
-  - name: harbor-registro
+  #imagePullSecrets:
+  #- name: harbor-registro
