--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -5,10 +5,8 @@ spec:
     - name: maven
       image: erivando/maven:3.9.0-openjdk-11 #maven:3.8.6-openjdk-11
       #command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
-      - args:
-        - "9999999"
-        command:
-        - "sleep"
+      command: ["/bin/sh -cp"]
+      args: ["sleep", "9999999"]
       imagePullPolicy: Always # use cache or pull image for agent
       resources:  # limits the resources your build contaienr
         requests:
