--- a/build-pod.yaml
+++ b/build-pod.yaml
@@ -15,6 +15,9 @@ spec:
         limits:
           cpu: "5000m"
           memory: "3Gi"
+      env:
+      - name: JENKINS_URL
+        value: ""
     - name: docker
       image: docker:20.10 #dti-registro.unilab.edu.br/unilab/docker:latest
       #command: ["tail", "-f", "/dev/null"]
