--- a/values.yaml
+++ b/values.yaml
@@ -19,10 +19,7 @@ spec:
   containers:  # list of containers that you want present for your build, you can define a default container in the Jenkinsfile
     - name: maven
       image: erivando/maven:3.9.0-openjdk-11 #maven:3.8.6-openjdk-11
-      #command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
-      #command: ["/bin/sh -cp"]
-      #args: ["sleep", "9999999"]
-      tty: true
+      command: ["tail", "-f", "/dev/null"]  # this or any command that is bascially a noop is required, this is so that you don't overwrite the entrypoint of the base container
       imagePullPolicy: Always # use cache or pull image for agent
       resources:  # limits the resources your build contaienr
         requests:
@@ -31,15 +28,9 @@ spec:
         limits:
           cpu: "5000m"
           memory: "3Gi"
-      env:
-      - name: JENKINS_URL
-        value: "http://jenkins.jenkins.svc.cluster.local"
-      - name: JENKINS_TUNNEL
-        value: "jenkins.jenkins.svc.cluster.local:"
     - name: docker
       image: docker:20.10 #dti-registro.unilab.edu.br/unilab/docker:latest
-      #command: ["tail", "-f", "/dev/null"]
-      tty: true
+      command: ["tail", "-f", "/dev/null"]
       imagePullPolicy: IfNotPresent
       resources: {}
       volumeMounts:
