--- a/jenkins-agent-pod-k8s.yaml
+++ b/jenkins-agent-pod-k8s.yaml
@@ -27,10 +27,10 @@ apiVersion: v1
 kind: Pod
 metadata:
   # O nome não é realmente necessário, mas é uma solução alternativa (workaround) para as regras de datree's que não estão funcionando de outra forma: https://github.com/datreeio/datree/issues/730
-  name: jenkins-agent
+  name: jenkins-agent-inbound
   namespace: jenkins
   labels:
-    app: jenkins-agent
+    app: jenkins-agent-inbound
   annotations:
     cluster-autoscaler.kubernetes.io/safe-to-evict: "false"
     datree.skip/CONTAINERS_MISSING_READINESSPROBE_KEY: readiness probe is not relevant for CI/CD CLI shell containers
@@ -367,3 +367,7 @@ spec:
         - mountPath: /tmp/lint
           name: workspace-volume
           readOnly: false
+          
+          
+          
+          
