--- a/jenkins-agent-pod-k8s.yaml
+++ b/jenkins-agent-pod-k8s.yaml
@@ -76,7 +76,7 @@ spec:
   # Necessário para o conteiner argocd para /home/jenkins/agent/workspace/<pipline>@tmp/durable-888973f9/jenkins-log.txt, caso contrário, permissão negada
   securityContext:
     runAsUser: 0
-  containers:
+  containers:  # lista de contêineres que deseja apresentar para o build, pode-se definir um contêiner padrão no Jenkinsfile
     # ==================================================
     # https://cloud.google.com/sdk/docs/downloads-docker
     # https://hub.docker.com/r/google/cloud-sdk/
@@ -369,5 +369,39 @@ spec:
           readOnly: false
           
           
-          
+    # ==================================================
+    # https://hub.docker.com/_/maven/tags
+    - name: maven
+      image: erivando/maven:3.9.0-openjdk-11 # imagem customizada
+      #command: ["tail", "-f", "/dev/null"]  # este ou qualquer comando que seja basicamente um noop é necessário, isso é para que não substitua o ponto de entrada do contêiner base
+      imagePullPolicy: Always # use o cache ou puxe a imagem para o agente
+      resources:  # limites e recursos que o build contém
+        requests:
+          cpu: "250m"
+          memory: "512Mi"
+        limits:
+          cpu: "5000m"
+          memory: "3Gi"
+    # ==================================================
+    # https://docs.docker.com/engine/release-notes/20.10/
+    - name: docker
+      image: docker:20.10.23-cli #dti-registro.unilab.edu.br/unilab/docker:latest
+      #command: ["tail", "-f", "/dev/null"]
+      imagePullPolicy: IfNotPresent
+      resources:
+        requests:
+          cpu: "250m"
+          memory: "256Mi"
+        limits:
+          cpu: "350m"
+          memory: "1Gi"
+      volumeMounts:
+        - name: docker
+          mountPath: /var/run/docker.sock # Usao do mecanismo do docker do host k8s
+  volumes:
+    - name: docker
+      hostPath:
+        path: /var/run/docker.sock
+  #imagePullSecrets:
+  #- name: harbor-registro
           
