--- a/jenkins-agent-pod-k8s.yaml
+++ b/jenkins-agent-pod-k8s.yaml
@@ -22,6 +22,18 @@
 #
 #   https://github.com/erivandosena/Templates/blob/master/Jenkinsfile
 
+# https://kubernetes.io/docs/concepts/scheduling-eviction/pod-priority-preemption/
+# O Pod priority é um recurso de agendamento do Kubernetes que permite ao Kubernetes 
+# tomar decisões de agendamento comparando outros pods com base no número de prioridade.
+apiVersion: scheduling.k8s.io/v1
+kind: PriorityClass
+metadata:
+  name: high-priority-apps
+value: 1000000
+preemptionPolicy: PreemptLowerPriority
+globalDefault: false
+description: "Aplicativos de missão crítica."
+
 ---
 apiVersion: v1
 kind: Pod
@@ -36,7 +48,7 @@ metadata:
     datree.skip/CONTAINERS_MISSING_READINESSPROBE_KEY: readiness probe não é relevante para contêineres de shell CI/CD CLI
     datree.skip/CONTAINERS_MISSING_LIVENESSPROBE_KEY: liveness probe não é relevante para contêineres de shell CI/CD CLI
 spec:
-  priorityClassName: high-priority  # requer priorityclass.yaml
+  priorityClassName: high-priority-apps  # requer priorityclass.yaml
   affinity:
     # Evite preempção que pode causar falhas de build
     nodeAffinity:
