--- a/jenkins-agent-pod-k8s.yaml
+++ b/jenkins-agent-pod-k8s.yaml
@@ -372,7 +372,7 @@ spec:
     # https://hub.docker.com/_/maven/tags
     - name: maven
       image: erivando/maven:3.9.0-openjdk-11 # imagem customizada
-      #command: ["tail", "-f", "/dev/null"]  # este ou qualquer comando que seja basicamente um noop é necessário, isso é para que não substitua o ponto de entrada do contêiner base
+      command: ["tail", "-f", "/dev/null"]  # este ou qualquer comando que seja basicamente um noop é necessário, isso é para que não substitua o ponto de entrada do contêiner base
       imagePullPolicy: Always # use o cache ou puxe a imagem para o agente
       resources:  # limites e recursos que o build contém
         requests:
@@ -385,8 +385,8 @@ spec:
     # https://docs.docker.com/engine/release-notes/20.10/
     - name: docker
       image: docker:20.10.23-cli #dti-registro.unilab.edu.br/unilab/docker:latest
-      #command: ["tail", "-f", "/dev/null"]
-      imagePullPolicy: IfNotPresent
+      command: ["tail", "-f", "/dev/null"]
+      imagePullPolicy:  Always
       resources:
         requests:
           cpu: "250m"
@@ -401,5 +401,3 @@ spec:
     - name: docker
       hostPath:
         path: /var/run/docker.sock
-  #imagePullSecrets:
-  #- name: harbor-registro
