--- a/pom.xml
+++ b/pom.xml
@@ -6,20 +6,18 @@
       <maven>3.0.0</maven>
   </prerequisites>
   
+  <groupId>br.edu.unilab</groupId>
   <artifactId>${env.APP_NAME}</artifactId>
-  <version>1.0.0-SNAPSHOT</version>
-  <groupId>br.edu.unilab.${env.APP_NAME}</groupId>
-  <name>Example Application ${env.APP_NAME}</name>
   <packaging>jar</packaging>
+  <version>${revision}</version>
+  <name>Example Application ${env.APP_NAME}</name>
+  <url>http://maven.apache.org</url>
   
   <properties>
+      <revision>1.0.0</revision>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-      <maven.compiler.source>1.8</maven.compiler.source>
-      <maven.compiler.target>1.8</maven.compiler.target>
   </properties>
-  
-  <url>http://maven.apache.org</url>
   
   <dependencies>
     <dependency>
@@ -50,7 +48,7 @@
             <manifest>
               <addClasspath>true</addClasspath>
               <classpathPrefix>lib/</classpathPrefix>
-              <mainClass>br.edu.unilab.${env.APP_NAME}</mainClass>
+              <mainClass>br.edu.unilab.app.App</mainClass>
             </manifest>
           </archive>
         </configuration>
