--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
   <url>http://maven.apache.org</url>
   
   <properties>
-      <revision>${env.VERSION}-SNAPSHOT</revision>
+      <revision>1.0.0-SNAPSHOT</revision>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
   </properties>
