--- a/k8s.yaml
+++ b/k8s.yaml
@@ -2,37 +2,84 @@ apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sample-app
-  namespace: sample-app
-  labels:
-    app: sample-app
+  namespace: app-pipeline-cicd
 spec:
-  selector:
-    matchLabels:
-      app: sample-app
-  replicas: 2
-  template:
-    metadata:
-      labels:
-        app: sample-app
-  minReadySeconds: 10
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 1
-      maxSurge: 1
+  replicas: 1
   template:
     metadata:
       labels:
         app: sample-app
     spec:
       containers:
-        - name: sample-app
-          image: ${DOCKER_IMAGE}
-          ports:
-            - containerPort: 80
-              protocol: TCP
-              name: web
-      #imagePullSecrets:
-      #  - name: dockerhub
-      
-      
+      - name: sample-app
+        image: ${DOCKER_IMAGE}
+        # resources:
+        #   requests: {}
+        #   limits: {}
+        resources:
+          requests:
+            cpu: '0.5'
+            memory: 128Mi
+          limits:
+            cpu: 1
+            memory: 1Gi
+        imagePullPolicy: Always
+        ports:
+        - containerPort: 80
+        volumeMounts:
+        - name: tz-america
+          mountPath: /etc/localtime
+      volumes:
+        - name: tz-america
+          hostPath:
+            path: /usr/share/zoneinfo/America/Fortaleza
+            type: File
+  selector:
+    matchLabels:
+        app: sample-app
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: sample-app
+  namespace: app-pipeline-cicd
+  labels:
+    app: sample-app
+  annotations:
+    metallb.universe.tf/address-pool: int-pool
+spec:
+  selector:
+    app: sample-app
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 80
+      name: http
+  type: LoadBalancer
+  #loadBalancerIP: 10.130.1.x
+  externalTrafficPolicy: Local
+
+---
+apiVersion: networking.k8s.io/v1
+kind: Ingress
+metadata:
+   name: sample-app
+   namespace: app-pipeline-cicd
+   annotations:
+      haproxy.org/check: enabled
+      haproxy.org/forwarded-for: enabled
+      haproxy.org/load-balance: roundrobin
+      haproxy.org/ssl-redirect: 'true'
+      haproxy.org/ssl-redirect-code: '301'
+spec:
+  rules:
+    - host: hello-world-test.unilab.edu.br
+      http:
+        paths:
+          - path: /
+            pathType: Prefix
+            backend:
+               service:
+                  name: sample-app
+                  port:
+                     number: 80
