--- a/k8s.yaml
+++ b/k8s.yaml
@@ -12,7 +12,7 @@ spec:
     spec:
       containers:
       - name: sample-app
-        image: ${DOCKER_IMAGE}
+        image: unlb/sample-app
         # resources:
         #   requests: {}
         #   limits: {}
