--- a/k8s.yaml
+++ b/k8s.yaml
@@ -18,7 +18,7 @@ spec:
     spec:
       containers:
       - name: sample-app
-        image: unlb/sample-app
+        image: <IMAGE_TAG>
         # resources:
         #   requests: {}
         #   limits: {}
