--- a/k8s.yaml
+++ b/k8s.yaml
@@ -1,20 +1,20 @@
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: app-pipeline-cicd
+  name: <APP_NAMESPACE>
 
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: sample-app
-  namespace: app-pipeline-cicd
+  namespace: <APP_NAMESPACE>
 spec:
   replicas: 1
   template:
     metadata:
       labels:
-        app: sample-app
+        app: <APP_NAME>
     spec:
       containers:
       - name: sample-app
@@ -42,20 +42,20 @@ spec:
             type: File
   selector:
     matchLabels:
-        app: sample-app
+        app: <APP_NAME>
 ---
 apiVersion: v1
 kind: Service
 metadata:
   name: sample-app
-  namespace: app-pipeline-cicd
+  namespace: <APP_NAMESPACE>
   labels:
-    app: sample-app
+    app: <APP_NAME>
   annotations:
     metallb.universe.tf/address-pool: int-pool
 spec:
   selector:
-    app: sample-app
+    app: <APP_NAME>
   ports:
     - protocol: TCP
       port: 80
@@ -69,8 +69,8 @@ spec:
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-   name: sample-app
-   namespace: app-pipeline-cicd
+   name: <APP_NAME>-svc
+   namespace: <APP_NAMESPACE>
    annotations:
       haproxy.org/check: enabled
       haproxy.org/forwarded-for: enabled
@@ -86,6 +86,6 @@ spec:
             pathType: Prefix
             backend:
                service:
-                  name: sample-app
+                  name: <APP_NAME>-svc
                   port:
                      number: 80
