--- a/pom.xml
+++ b/pom.xml
@@ -67,8 +67,10 @@
 
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
+                <version>3.10.1</version>
+                <type>maven-plugin</type>
                 <configuration>
                     <release>11</release>
                 </configuration>
