--- a/pom.xml
+++ b/pom.xml
@@ -43,19 +43,15 @@
                     <useSystemClassLoader>false</useSystemClassLoader>
                 </configuration>
             </plugin>
-                
+            <!--    
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.10.1</version>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>3.5.0</version>
+                <type>maven-plugin</type>
                 <configuration>
                     <release>11</release>
                 </configuration>
-                <!--
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <version>${maven-assembly-plugin.version}</version>
-                -->
                 <executions>
                     <execution>
                         <phase>package</phase>
@@ -73,6 +69,33 @@
                                 <descriptorRef>jar-with-dependencies</descriptorRef>
                             </descriptorRefs>
                         </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+            -->
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <groupId>org.apache.maven.plugins</groupId>
+                <version>3.5.0</version>
+                <type>maven-plugin</type>
+                <configuration>
+                    <release>11</release>
+                    <archive>
+                    <manifest>
+                        <mainClass>br.edu.unilab.app.App</mainClass>
+                    </manifest>
+                    </archive>
+                    <descriptorRefs>
+                    <descriptorRef>jar-with-dependencies</descriptorRef>
+                    </descriptorRefs>
+                </configuration>
+                <executions>
+                    <execution>
+                    <id>make-assembly</id>
+                    <phase>package</phase>
+                    <goals>
+                        <goal>single</goal>
+                    </goals>
                     </execution>
                 </executions>
             </plugin>
